# json-career-view

./: README.md  build_wkhtmltopdf.md  cv_python_dev.json  gianfranco-salomone-cv.json  package-lock.json  package.json
.vercel/: project.json
cv-to-pdf/: .gitignore  create-lambda-files.sh  cv_to_pdf.py  main.py  main_lambda.py  pyproject.toml
cv_to_pdf/: .gitignore  check_wkhtmltopdf.py  create-lambda-files.sh  cv_to_pdf.py  lambda_test.json  main_lambda.py  main_local.py  pyproject.toml  test_local_pdf_generation.py  test_remote_pdf_generation.py
cv_to_pdf/docker/: Dockerfile.python-deps  Dockerfile.test  Dockerfile.wkhtmltopdf
cv_to_pdf/templates/: cv_template.html
export-to-pdf/: README.md  pyproject.toml
my-json-resume/: .gitignore  package-lock.json  package.json
my-json-resume/docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  nginx.conf
my-json-resume/src/app/: globals.css  layout.tsx  page.tsx
my-json-resume/src/components/: AboutCard.tsx  AboutItem.tsx  ContactInfo.tsx  ContactInfoCard.tsx  Education.tsx  EducationCard.tsx  EducationItem.tsx  InterestsCard.tsx  InterestsItem.tsx  PdfCreator.tsx  ProjectsCard.tsx  ProjectsItem.tsx  Resume.tsx  ResumeHeaderCard.tsx  ResumeTitle.tsx  Skills.tsx  SkillsCard.tsx  SpokenLanguagesCard.tsx  SpokenLanguagesItem.tsx  WorkExperience.tsx  WorkExperienceCard.tsx  WorkExperienceItem.tsx  types.ts  typesHybrid.ts
my-json-resume/src/data/: base_cv.json  cv_python_dev.json  cv_python_dev_jp_morgan.json
