[project]
name = "cv-to-pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "gsalomone",email = "gianfranco.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "weasyprint (>=65.1,<66.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
